--- a/.github/workflows/charts-lint-test-scan.yml
+++ b/.github/workflows/charts-lint-test-scan.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 jobs:
   lint-test-scan:
-    uses: Cray-HPE/hms-build-scripts/.github/workflows/charts-lint-test-scan.yml@master
+    uses: Cray-HPE/hms-build-scripts/.github/workflows/charts-lint-test-scan.yml@ignore-image-prefix
 
     with:
       lint-charts: ${{ github.event_name == 'pull_request' }}
