Update for power capping fixes for both csm 1.0 and 1.2 (#3)
* Add 1.23 chart for power capping in CSM 1.0
* CSM 1.2 chart update

--- a/charts/v1.23/cray-hms-capmc/values.yaml
+++ b/charts/v1.23/cray-hms-capmc/values.yaml
@@ -10,10 +10,6 @@
 global:
   appVersion: 1.31.0
 
-image:
-  repository: artifactory.algol60.net/csm-docker/stable/cray-capmc
-  pullPolicy: IfNotPresent
-
 hms_ca_uri: ""
 
 cray-service:
@@ -25,7 +21,7 @@ cray-service:
     cray-capmc:
       name: "cray-capmc"
       image:
-        repository: artifactory.algol60.net/csm-docker/stable/cray-capmc
+        repository: "cray/cray-capmc"
       ports:
         - name: http
           containerPort: 27777
