--- a/charts/v1.23/cray-hms-capmc/values.yaml
+++ b/charts/v1.23/cray-hms-capmc/values.yaml
@@ -8,7 +8,7 @@
 #   pullPolicy: "" (default = "IfNotPresent")
 
 global:
-  appVersion: 1.31.1
+  appVersion: 1.31.1-20220406200816_577905b
 
 hms_ca_uri: ""
 
