--- a/charts/v2.0/cray-hms-capmc/Chart.yaml
+++ b/charts/v2.0/cray-hms-capmc/Chart.yaml
@@ -13,6 +13,6 @@ dependencies:
 maintainers:
   - name: Hardware Management
     url: https://github.com/orgs/Cray-HPE/teams/hardware-management
-appVersion: "1.33.1"
+appVersion: "1.33.1-20220406200604_f4e377c"
 annotations:
   artifacthub.io/license: "MIT"
