Don't need to change as many charts as I thought

--- a/charts/v2.0/cray-hms-capmc/Chart.yaml
+++ b/charts/v2.0/cray-hms-capmc/Chart.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v2
 name: "cray-hms-capmc"
-version: 2.0.6
+version: 2.0.5
 description: "Kubernetes resources for cray-hms-capmc"
 home: "https://github.com/Cray-HPE/hms-capmc-charts"
 sources:
@@ -13,6 +13,6 @@ dependencies:
 maintainers:
   - name: Hardware Management
     url: https://github.com/orgs/Cray-HPE/teams/hardware-management
-appVersion: "1.33.1-20220406200604_f4e377c"
+appVersion: "1.33.0"
 annotations:
   artifacthub.io/license: "MIT"
