--- a/charts/v3.0/cray-hms-capmc/values.yaml
+++ b/charts/v3.0/cray-hms-capmc/values.yaml
@@ -8,8 +8,8 @@
 #   pullPolicy: "" (default = "IfNotPresent")
 
 global:
-  appVersion: 2.1.0-20220406195745.30b6cde
-  testVersion: 2.1.0-20220406195745.30b6cde
+  appVersion: 2.1.0
+  testVersion: 2.1.0
 tests:
   image:
     repository: artifactory.algol60.net/csm-docker/stable/cray-capmc-test
