--- a/charts/v3.0/cray-hms-capmc/values.yaml
+++ b/charts/v3.0/cray-hms-capmc/values.yaml
@@ -10,14 +10,15 @@
 global:
   appVersion: 2.1.0
   testVersion: 2.1.0
-tests:
-  image:
-    repository: artifactory.algol60.net/csm-docker/stable/cray-capmc-test
-    pullPolicy: IfNotPresent
 
 image:
   repository: artifactory.algol60.net/csm-docker/stable/cray-capmc
   pullPolicy: IfNotPresent
+
+tests:
+  image:
+    repository: artifactory.algol60.net/csm-docker/stable/cray-capmc-test
+    pullPolicy: Always
 
 hms_ca_uri: ""
 
