--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ Chart.lock
 *.csr
 *.key
 *.pem
+
+# Vendor directories that should not be checked in
+vendor/hms-build-changed-charts-action/
+        
