--- a/cray-hms-capmc.compatibility.yaml
+++ b/cray-hms-capmc.compatibility.yaml
@@ -7,6 +7,7 @@ chartVersionToCSMVersion:
   ">=3.0.0": "~1.3.0"
   ">=4.0.0": "~1.4.0"
   ">=4.1.0": "~1.5.0" # 4.1.0 is the update to cray-service 10.0
+  ">=5.0.0": "~1.6.0" # 5.0.0 is the update to cray-service 10.0.6 and docker-kubectl 1.24.17
 
 # The application version must be compliant to semantic versioning.
 # If the application makes a backwards incompatible change, then its major version needs to be increment.
@@ -34,6 +35,7 @@ chartVersionToApplicationVersion:
   "4.0.2": "3.3.0"
   "4.0.3": "3.6.0"
   "4.1.0": "3.6.0"
+  "5.0.0": "3.6.0"
 
 # Test results for combinations of Chart, Application, and CSM versions.
 chartValidationLog: []
