--- a/cray-hms-capmc.compatibility.yaml
+++ b/cray-hms-capmc.compatibility.yaml
@@ -7,7 +7,7 @@ chartVersionToCSMVersion:
   ">=3.0.0": "~1.3.0"
   ">=4.0.0": "~1.4.0"
   ">=4.1.0": "~1.5.0" # 4.1.0 is the update to cray-service 10.0
-  ">=5.0.0": "~1.6.0" # 5.0.0 is the update to cray-service 10.0.6 and docker-kubectl 1.24.17
+  ">=5.0.0": "~1.6.0" # 5.0.0 is the update to cray-service 10.0.6
 
 # The application version must be compliant to semantic versioning.
 # If the application makes a backwards incompatible change, then its major version needs to be increment.
